# discordboy

./: .env  .env.example  .gitignore  Makefile  README.md  appus.py  dashboard_log.txt  data_discord.ipynb  deezeer_extract.ipynb  df_tracks_sorted.csv  discord_messages.csv  fonctions.py  fonctions_extract.py  main.py  package_messages.csv  package_sola_messages.csv  pyproject.toml  requiements.txt  test.ipynb
corus/: botus.py  firestorus.py  processus.py
dashboardus/: appus.py  callbackus.py  layoutus.py
dashboardus/assets/: style.css
data_discord/dataus/: role_colors.json
dataus/: constant.py  discord_server_stats.csv  role_colors.json  role_data.json  role_names.json  server_data.json  user.py
fonctionus/: convertus.py  extractus.py
interfacus/: appus.py  callbackus.py  dashus.py  viewus.py
