[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "discordboy"
version = "1.0.0"
description = "A Discord bot for various utilities."
readme = "README.md"
requires-python = ">=3.10"

authors = [
  { name = "nathboy", email = "nathan.novier@etu.minesparis.psl.eu" },
]

dependencies = [
    "discord.py==2.3.2",
    "dotenv==0.21.0",
    "pandas==2.2.2",
    "pyarrow==16.1.0",
    "dash==2.17.1",
    "dash-bootstrap-components==1.6.0",
    "plotly==5.22.0",
    "python-dotenv==1.0.1"
]

[project.urls]
"Homepage" = "https://github.com/bloonsboy/discordboy"